syntax = "proto3";

package order;

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "OrderProto";

// =======================================
//              ORDER SERVICE
// =======================================
service OrderService {

  // Cart Service -> Order Service
  // Create order from cart
  rpc CreateOrder (CartRequest)
      returns (OrderResponse);

  // Payment Service -> Order Service
  // Get immutable snapshot for payment
  rpc GetOrderSnapshot (GetOrderSnapshotRequest)
      returns (OrderSnapshotResponse);
}

//
// =======================================
//              CART (DO NOT CHANGE)
// =======================================
//
message CartRequest {
  int32 userId = 1;
  repeated CartItem items = 2;
}

message CartItem {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
  string image = 5;
  string variantId = 6;
}

//
// =======================================
//              ORDER
// =======================================
//
message OrderResponse {
  string orderId = 1;
  string message = 2;
}

//
// =======================================
//              PAYMENT REQUEST
// =======================================
//
message GetOrderSnapshotRequest {
  string orderId = 1;
}

//
// =======================================
//              PAYMENT SNAPSHOT
// =======================================
//
message OrderSnapshotResponse {
  string orderId = 1;
  int32 userId = 2;
  double totalPrice = 3;

  // ISO-8601 format (UTC)
  // Example: 2025-12-17T10:30:00Z
  string snapshotAt = 4;

  repeated OrderItem items = 5;
}

message OrderItem {
  string productId = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
}
